tests/NormalTests/paczka1/fuzzy1/20059061.err
Error in line 2: YGLj0vdd0Nw A150 14,0
Error in line 4: YGLj0vdd0Nw S58 88,1
Error in line 8: YGLj0vdd0Nw S735 28,6
Error in line 10: Ew8Id S58 14,8
Error in line 34: Vkm7un S735 72,1
Error in line 31: YGLj0vdd0Nw S298 27,2
Error in line 26: a3NV3 S735 32,3
